packages/verta-protocol/fixtures/token/jws/invalid/AU-TOKEN-UNKNOWNKID-007.jwt
eyJ0eXAiOiJKV1QiLCJhbGciOiJFZERTQSIsImtpZCI6ImZpeHR1cmUtdG9rZW4ta2V5LTIifQ.eyJpc3MiOiJicmlkZ2UuZXhhbXBsZSIsImF1ZCI6InZlcnRhLWdhdGV3YXkiLCJzdWIiOiJhY2N0LTEiLCJqdGkiOiJucy0xNzc1MDAyMjAwMDAwMDAwMDAwIiwiaWF0IjoxNzc1MDAyMjAwLCJuYmYiOjE3NzUwMDIyMDAsImV4cCI6MTc3NTAwMjUwMCwiZGV2aWNlX2lkIjoiZGV2aWNlLTEiLCJtYW5pZmVzdF9pZCI6Im1hbi0yMDI2LTA0LTAxLTAwMSIsInBvbGljeV9lcG9jaCI6NywiY29yZV92ZXJzaW9ucyI6WzFdLCJjYXJyaWVyX3Byb2ZpbGVzIjpbImNhcnJpZXItcHJpbWFyeSJdLCJjYXBhYmlsaXRpZXMiOlsxLDJdLCJzZXNzaW9uX21vZGVzIjpbInRjcCJdLCJyZWdpb25fc2NvcGUiOiJldS1jZW50cmFsIiwidG9rZW5fbWF4X3JlbGF5X3N0cmVhbXMiOjgsInRva2VuX21heF91ZHBfZmxvd3MiOjQsInRva2VuX21heF91ZHBfcGF5bG9hZCI6MTIwMH0.pfHhTKvurf_JkIuXW8fBY8Prz6DPso6JBQ-TYJQYb5KkjmHEETgDhgAXCeY-3fv-RYGjxfymEmgcX0Yt-nfyAQ